yaml/yugabyte/base/statefulset-master.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "yb-master"
  labels:
    app: "yb-master"
    app.openshift.io/runtime: "postgresql"
spec:
  serviceName: "yb-masters"
  podManagementPolicy: Parallel

  replicas: 1

  volumeClaimTemplates:
  - metadata:
      name: datadir0
      labels:
        app: "yb-master"
    spec:
      accessModes:
      - "ReadWriteOnce"
      storageClassName: gp3-csi
      resources:
        requests:
          storage: 5Gi
  - metadata:
      name: datadir1
      labels:
        app: "yb-master"
    spec:
      accessModes:
      - "ReadWriteOnce"
      storageClassName: gp3-csi
      resources:
        requests:
          storage: 5Gi
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:

      partition: 0

  selector:
    matchLabels:
      app: "yb-master"
  template:
    metadata:
      labels:
        app: "yb-master"
    spec: # yb-masters
      terminationGracePeriodSeconds: 300
      containers:
      - name: "yb-master"
        image: "docker.io/yugabytedb/yugabyte:2.17.2.0-b216"
        imagePullPolicy: IfNotPresent
        lifecycle:
          postStart:
            exec:
              command:
              - "bash"
              - "-c"
              - >
                mkdir -p /mnt/disk0/cores;
                mkdir -p /mnt/disk0/yb-data/scripts;
                if [ ! -f /mnt/disk0/yb-data/scripts/log_cleanup.sh ]; then
                  if [ -f /home/yugabyte/bin/log_cleanup.sh ]; then
                    cp /home/yugabyte/bin/log_cleanup.sh /mnt/disk0/yb-data/scripts;
                  fi;
                fi
        livenessProbe:
          exec:
            command:
            - bash
            - -c
            - touch "/mnt/disk0/disk.check" "/mnt/disk1/disk.check"
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 200m
            memory: 1Gi
        # core dumps are collected to workingDir if
        # kernel.core_pattern is set to a relative path like
        # core.%e.%p.%t ref:
        # https://github.com/yugabyte/charts/issues/11
        workingDir: "/mnt/disk0/cores"
        command:
        - "/sbin/tini"
        - "--"
        args:
        - "/bin/bash"
        - "-c"
        - |
          [...]
        ports:
        - containerPort: 7000
          name: "http-ui"
        - containerPort: 7100
          name: "tcp-rpc-port"
        volumeMounts:
        - name: debug-hooks-volume
          mountPath: /opt/debug_hooks_config
        - name: datadir0
          mountPath: /mnt/disk0
        - name: datadir1
          mountPath: /mnt/disk1
      - name: yb-cleanup
        image: "docker.io/yugabytedb/yugabyte:2.17.2.0-b216"
        imagePullPolicy: IfNotPresent
        command:
        - "/sbin/tini"
        - "--"
        args:
        - "/bin/bash"
        - "-c"
        - >
          while true; do
            sleep 3600;
            /home/yugabyte/scripts/log_cleanup.sh;
          done
        volumeMounts:
        - name: datadir0
          mountPath: /home/yugabyte/
          subPath: yb-data
        - name: datadir0
          mountPath: /var/yugabyte/cores
          subPath: cores

        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault

        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi

      volumes:
      - name: debug-hooks-volume
        configMap:
          name: yb-demo-0-yugabyte-master-hooks
          defaultMode: 0755
