yaml/yugabyte/base/statefulset-tserver.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "yb-tserver"
  labels:
    app: "yb-tserver"
spec:
  serviceName: "yb-tservers"
  podManagementPolicy: Parallel
  replicas: 1
  #volumeClaimTemplates:
  #- metadata:
  #    name: datadir0
  #    labels:
  #      app: "yb-tserver"
  #  spec:
  #    accessModes:
  #    - "ReadWriteOnce"
  #    storageClassName: gp3-csi
  #    resources:
  #      requests:
  #        storage: 5Gi
  #- metadata:
  #    name: datadir1
  #    labels:
  #      app: "yb-tserver"
  #  spec:
  #    accessModes:
  #    - "ReadWriteOnce"
  #    storageClassName: gp3-csi
  #    resources:
  #      requests:
  #        storage: 5Gi
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  selector:
    matchLabels:
      app: "yb-tserver"
  template:
    metadata:
      labels:
        app: "yb-tserver"
    spec: # yb-tservers
      terminationGracePeriodSeconds: 300
      containers:
      - name: "yb-tserver"
        image: "docker.io/yugabytedb/yugabyte:2.17.2.0-b216"
        imagePullPolicy: IfNotPresent
        lifecycle:
          postStart:
            exec:
              command:
              - "bash"
              - "-c"
              - >
                mkdir -p /mnt/disk0/cores;
                mkdir -p /mnt/disk0/yb-data/scripts;
                if [ ! -f /mnt/disk0/yb-data/scripts/log_cleanup.sh ]; then
                  if [ -f /home/yugabyte/bin/log_cleanup.sh ]; then
                    cp /home/yugabyte/bin/log_cleanup.sh /mnt/disk0/yb-data/scripts;
                  fi;
                fi
        livenessProbe:
          exec:
            command:
            - bash
            - -c
            - touch "/mnt/disk0/disk.check" "/mnt/disk1/disk.check"
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 4Gi
          requests:
            cpu: 200m
            memory: 1Gi
        # core dumps are collected to workingDir if
        # kernel.core_pattern is set to a relative path like
        # core.%e.%p.%t ref:
        # https://github.com/yugabyte/charts/issues/11
        workingDir: "/mnt/disk0/cores"
        command:
        - "/sbin/tini"
        - "--"
        args:
        - "/bin/bash"
        - "-c"
        - |
          [...]
        ports:
        - containerPort: 9000
          name: "http-ui"
        - containerPort: 12000
          name: "http-ycql-met"
        - containerPort: 11000
          name: "http-yedis-met"
        - containerPort: 13000
          name: "http-ysql-met"
        - containerPort: 9100
          name: "tcp-rpc-port"
        - containerPort: 6379
          name: "tcp-yedis-port"
        - containerPort: 9042
          name: "tcp-yql-port"
        - containerPort: 5433
          name: "tcp-ysql-port"
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: debug-hooks-volume
          mountPath: /opt/debug_hooks_config
        - name: datadir0
          mountPath: /mnt/disk0
        - name: datadir1
          mountPath: /mnt/disk1
      - name: yb-cleanup
        image: "docker.io/yugabytedb/yugabyte:2.17.2.0-b216"
        imagePullPolicy: IfNotPresent
        command:
        - "/sbin/tini"
        - "--"
        args:
        - "/bin/bash"
        - "-c"
        - >
          while true; do
            sleep 3600;
            /home/yugabyte/scripts/log_cleanup.sh;
          done
        volumeMounts:
        - name: datadir0
          mountPath: /home/yugabyte/
          subPath: yb-data
        - name: datadir0
          mountPath: /var/yugabyte/cores
          subPath: cores
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
      volumes:
      - name: debug-hooks-volume
        configMap:
          name: yb-demo-0-yugabyte-tserver-hooks
          defaultMode: 0755
      - name: datadir0
        emptyDir: {}
      - name: datadir1
        emptyDir: {}
